<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_courses" />
    
    <item
        android:id="@+id/nav_timetable"
        android:icon="@drawable/ic_schedule"
        android:title="@string/nav_timetable" />
    
    <item
        android:id="@+id/nav_grades"
        android:icon="@drawable/ic_grade"
        android:title="@string/nav_grades" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
    
</menu>